<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab5Formulario</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="lista_estados">
		<item>Rio de Janeiro</item>
		<item>São Paulo</item>
		<item>Acre</item>
    </string-array>
    <string name="nome">Nome Completo</string>
    <string name="idade">Idade</string>
    <string name="email">Email</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">feminino</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atualiza_auto">Atualizações automáticas?</string>
    <string name="aceito">Aceito os termos de aplicação</string>

</resources>
